# discord-splash

./: .gitignore  README.md  README.rst  docsrequirements.txt  release-drafter.yml  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml  labeler.yml  release-drafter.yml  todo.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql-analysis.yml  greetings.yml  main.yml  open_todo_issues.yml  python-package.yml  python-publish.yml
discordSlashCommands/: __init__.py
discordSplash/: __init__.py  abstractbaseclass.py  activity.py  audit_log.py  cfg.py  channel.py  commands.py  enums.py  events.py  exception.py  gateway.py  guild.py  interaction.py  main.py  member.py  message.py  presence.py  ratelimit.py  request.py  slashCommand.py  user.py  util.py
docs/: conf.py  discordSplash.rst  index.rst  modules.rst
docs/_build/doctrees/: FAQ.doctree  Todo.doctree  discordSplash.doctree  discordSplash.resources.doctree  environment.pickle  index.doctree  modules.doctree
docs/_build/doctrees/examples/: bots.doctree  commands.doctree  index.doctree
docs/_build/html/: .buildinfo  FAQ.html  Todo.html  discordSplash.html  discordSplash.resources.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: FAQ.rst.txt  Todo.rst.txt  discordSplash.resources.rst.txt  discordSplash.rst.txt  index.rst.txt
docs/_build/html/_static/: theme-vendors.js
docs/_build/html/examples/: bots.html  commands.html  (+1 more)
docs/examples/: index.rst
examples/: main.py
(+3 files in other folders)
