[metadata]
# replace with your username:
name = discordSplash
version = 0.6-ALPHA
url = https://github.com/Mineinjava/discord-splash
author = Mineinjava
packages = find: discordSplash
author_email = mineinjava@gmail.com
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
description = An API wrapper for Discord's slash commands. Written in Python.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.7
